BACKLOG-20000: fix padding top for spacing of preview drawer

--- a/src/javascript/JContent/ContentRoute/ContentLayout/ContentLayout.scss
+++ b/src/javascript/JContent/ContentRoute/ContentLayout/ContentLayout.scss
@@ -51,6 +51,7 @@
     width: 100%;
     max-width: 600px;
     height: unset;
+    padding-top: var(--spacing-small);
 
     transition: 0.15s;
     overflow: hidden;
